--- a/ExcelData/ExcelData.csproj
+++ b/ExcelData/ExcelData.csproj
@@ -258,15 +258,14 @@
     <Compile Include="CodeGen\CodeGenTemplateSession.cs" />
     <Compile Include="CodeGen\TemplateGenerator.cs" />
     <Compile Include="DataSerializer\ISerializer.cs" />
+    <Compile Include="ExcelReader\CellPosition.cs" />
+    <Compile Include="HeadModel.cs" />
+    <Compile Include="Side.cs" />
     <Compile Include="ExcelReader\IDataReader.cs" />
     <Compile Include="Export\ExportSetting.cs" />
     <Compile Include="Export\ExcelExport.cs" />
-    <Compile Include="Gen\CSharpUnityClassGen.cs" />
-    <Compile Include="Gen\CSharpClassGen.cs" />
-    <Compile Include="Gen\DataGen.cs" />
-    <Compile Include="Gen\XmlDataGen.cs" />
-    <Compile Include="Gen\JsonDataGen.cs" />
-    <Compile Include="Gen\ClassGen.cs" />
+    <Compile Include="DataGen\DataGen.cs" />
+    <Compile Include="DataGen\JsonDataGen.cs" />
     <Compile Include="Define.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="TypeInfo.cs" />
