--- a/ExcelData/ExcelData.csproj
+++ b/ExcelData/ExcelData.csproj
@@ -259,35 +259,17 @@
     <Compile Include="CodeGen\TemplateGenerator.cs" />
     <Compile Include="DataSerializer\BinarySerializer.cs" />
     <Compile Include="DataSerializer\ISerializer.cs" />
-    <Compile Include="ExcelWriter\DataWriter.cs" />
-    <Compile Include="ExcelWriter\IDataWriter.cs" />
-    <Compile Include="ExcelWriter\WriteHelper.cs" />
-    <Compile Include="ExcelWriter\SchemaWriter.cs" />
-    <Compile Include="ExcelReader\CellPosition.cs" />
     <Compile Include="Export\ExcelSerializer.cs" />
     <Compile Include="Export\ExportDefine.cs" />
-    <Compile Include="HeadModel.cs" />
     <Compile Include="Import\ExcelImport.cs" />
     <Compile Include="Import\ImportSetting.cs" />
     <Compile Include="Import\ImportDefine.cs" />
-    <Compile Include="Side.cs" />
-    <Compile Include="ExcelReader\IDataReader.cs" />
     <Compile Include="Export\ExportSetting.cs" />
     <Compile Include="Export\ExcelExport.cs" />
     <Compile Include="DataGen\DataGen.cs" />
     <Compile Include="DataGen\JsonDataGen.cs" />
     <Compile Include="Define.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="TypeInfo.cs" />
-    <Compile Include="Utils\ExcelHelper.cs" />
-    <Compile Include="Field.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ExcelReader\DataReader.cs" />
-    <Compile Include="ExcelReader\ReadLinkHelper.cs" />
-    <Compile Include="ExcelReader\ReadHelper.cs" />
-    <Compile Include="ExcelReader\SchemaReader.cs" />
-    <Compile Include="Schema.cs" />
-    <Compile Include="Utils\EnumUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -301,6 +283,12 @@
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.6.1\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.2.6.1\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Excel\Excel.csproj">
+      <Project>{094ad15f-3fac-457c-9529-9e15137c5a9f}</Project>
+      <Name>Excel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.linux.1.1.2\build\SQLitePCLRaw.lib.e_sqlite3.linux.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.linux.1.1.2\build\SQLitePCLRaw.lib.e_sqlite3.linux.targets')" />
